<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing 20%</string>
    <string name="good_15">Good 15%</string>
    <string name="ok_10">OK 10%</string>
    <string name="rounded_up_tip">Rounded up tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip amount: %S</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>

</resources>